@@ -1,6 +1,5 @@
 package com.ignfab.minalac.generator.utils.iterator;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -15,17 +14,17 @@ public class IteratorsTest {
     void testArray() {
         assertEmpty(Iterators.array(new String[0]));
 
-        assertBrowsesAllOnce(Arrays.asList("Disco"),
+        assertBrowsesAllOnce(List.of("Disco"),
             Iterators.iterator("Disco"));
 
-        assertBrowsesAllOnce(Arrays.asList("Upside", "down", "round", "round"),
+        assertBrowsesAllOnce(List.of("Upside", "down", "round", "round"),
             Iterators.iterator("Upside", "down", "round", "round"));
     }
 
     @Test
     void testFilter() {
         assertBrowsesAllOnce(
-            Arrays.asList(1, 3, 5, 7, 9),
+            List.of(1, 3, 5, 7, 9),
             Iterators.filter(
                 Iterators.iterator(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10),
                 item -> item % 2 != 0
@@ -33,7 +32,7 @@ public class IteratorsTest {
         );
 
         assertBrowsesAllOnce(
-            Arrays.asList(0, 2, 4, 6, 8, 10),
+            List.of(0, 2, 4, 6, 8, 10),
             Iterators.filter(
                 Iterators.iterator(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10),
                 item -> item % 2 == 0
@@ -59,22 +58,22 @@ public class IteratorsTest {
     void testIterator() {
         assertEmpty(Iterators.iterator());
 
-        assertBrowsesAllOnce(Arrays.asList("Here"),
+        assertBrowsesAllOnce(List.of("Here"),
             Iterators.iterator("Here"));
 
-        assertBrowsesAllOnce(Arrays.asList("North", "South", "East", "West"),
+        assertBrowsesAllOnce(List.of("North", "South", "East", "West"),
             Iterators.iterator("North", "East", "South", "West"));
     }
 
     @Test
     void testSingleton() {
         assertBrowsesAllOnce(
-            Arrays.asList("The One Ring"),
+            List.of("The One Ring"),
             Iterators.singleton("The One Ring")
         );
 
         assertBrowsesAllOnce(
-            Arrays.asList((Object) null),
+            Collections.singletonList(null),
             Iterators.singleton(null)
         );
     }
@@ -82,61 +81,56 @@ public class IteratorsTest {
     @Test
     void testRemap() {
         assertBrowsesAllOnce(
-            Arrays.asList(3, 5, 5, 6, 6, 6, 7),
+            List.of(3, 5, 5, 6, 6, 6, 7),
             Iterators.remap(
-                Arrays.asList(
+                List.of(
                     "Doc", "Grumpy", "Happy", "Sleepy", "Bashful", "Sneezy", "Dopey"
                 ).iterator(),
                 String::length
             )
         );
 
-        assertBrowsesAllOnce(
-            Collections.emptyList(),
-            Iterators.remap(Collections.emptyIterator(), String::length)
-        );
+        assertEmpty(Iterators.remap(Collections.emptyIterator(), String::length));
     }
 
     @Test
     void testUnion() {
         assertBrowsesAllOnce(
-            Arrays.asList("Heads", "Tails"),
+            List.of("Heads", "Tails"),
             Iterators.union(
-                Arrays.asList("Heads", "Tails").iterator()
+                List.of("Heads", "Tails").iterator()
             )
         );
 
         assertBrowsesAllOnce(
-            Arrays.asList("Clover", "Diamond", "Heart", "Spade"),
+            List.of("Clover", "Diamond", "Heart", "Spade"),
             Iterators.union(
-                Arrays.asList("Clover", "Spade").iterator(),
-                Arrays.asList("Diamond", "Heart").iterator()
+                List.of("Clover", "Spade").iterator(),
+                List.of("Diamond", "Heart").iterator()
             )
         );
 
         assertBrowsesAllOnce(
-            Arrays.asList("Odd", "Even"),
+            List.of("Odd", "Even"),
             Iterators.union(
                 Collections.emptyIterator(),
-                Arrays.asList("Odd", "Even").iterator()
+                List.of("Odd", "Even").iterator()
             )
         );
     }
 
     @Test
     void testUnwrap() {
-        List<Iterator<String>> list = new LinkedList<>();
+        List<Iterator<String>> list;
 
-        assertBrowsesAllOnce(
-            Collections.emptyList(),
-            Iterators.unwrap(list.iterator())
-        );
+        list = new LinkedList<>();
+        assertEmpty(Iterators.unwrap(list.iterator()));
 
         list = new LinkedList<>();
         list.add(Iterators.iterator("Frodo", "Sam", "Merry", "Pippin"));
 
         assertBrowsesAllOnce(
-            Arrays.asList("Frodo", "Sam", "Merry", "Pippin"),
+            List.of("Frodo", "Sam", "Merry", "Pippin"),
             Iterators.unwrap(list.iterator())
         );
 
@@ -147,7 +141,7 @@ public class IteratorsTest {
         list.add(Iterators.iterator("Gimli", "Legolas"));
 
         assertBrowsesAllOnce(
-            Arrays.asList("Frodo", "Gandalf", "Sam", "Merry", "Gimli", "Legolas", "Pippin", "Boromir", "Aragorn"),
+            List.of("Frodo", "Gandalf", "Sam", "Merry", "Gimli", "Legolas", "Pippin", "Boromir", "Aragorn"),
             Iterators.unwrap(list.iterator())
         );
 
@@ -157,7 +151,7 @@ public class IteratorsTest {
         list.add(Iterators.iterator("Gollum"));
 
         assertBrowsesAllOnce(
-            Arrays.asList("Frodo", "Sam", "Gollum"),
+            List.of("Frodo", "Sam", "Gollum"),
             Iterators.unwrap(list.iterator())
         );
     }
